# wintermute-stt

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  deny.toml  install.sh
.cargo/: config.toml
agent/: intent-card.json
src/: bus.rs  daemon.rs  engine.rs  lib.rs  main.rs  processor.rs  whisper_engine.rs
tests/: bus_smoke.rs  hardware_acs.rs
