[package]
name = "wintermute-stt"
version = "0.6.1"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
publish = false

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unused_must_use = "deny"
unreachable_pub = "warn"

[lints.clippy]
# Strict everyday lints
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# BAD_RUST-aligned restrictions: error on dishonest patterns
undocumented_unsafe_blocks = "deny"
multiple_unsafe_ops_per_block = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
indexing_slicing = "warn"
mem_forget = "deny"
as_conversions = "warn"
float_arithmetic = "warn"
dbg_macro = "deny"
print_stdout = "warn"
print_stderr = "warn"

# Tame pedantic noise without weakening BAD_RUST coverage
module_name_repetitions = "allow"
missing_errors_doc = "warn"
missing_panics_doc = "warn"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "debuginfo"
panic = "abort"

[[bin]]
name = "wm-stt"
path = "src/main.rs"

[features]
# Opt-in real engine: pulls whisper.cpp via `whisper-rs` (heavy native
# build) plus base64 decoding for PCM payloads. The default build keeps
# the daemon backed by `StubEngine` so development doesn't require the
# whisper.cpp toolchain. Activation requires a `.bin` model under
# `models_root` — see `src/whisper_engine.rs` for the path convention.
whisper = ["dep:whisper-rs", "dep:base64"]

# Opt-in gate for hardware-bound acceptance tests (see README "Hardware
# reality verification"). Off by default so `cargo test` stays green on
# hosts without the whisper.cpp toolchain / a live `wm-audio` PCM source.
# Per PRD-autobuilder-hardware-mock-convention AC10.
real-hardware = []

[dependencies]
agorabus = { path = "../agorabus", version = "0.12" }
anyhow = "1"
async-trait = "0.1"
base64 = { version = "0.22", optional = true }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
whisper-rs = { version = "0.13", optional = true, default-features = false }

[dev-dependencies]
proptest = "1"
tempfile = "3"
